adjusting imports of all tests and adding amanda's code