@@ -35,11 +35,11 @@ public class GetAverageExecutionTimeUC {
 
         // Agrupar serviços por tipo
         Map<String, List<ServiceEntity>> groupedByType = services.stream()
-                .collect(Collectors.groupingBy(ServiceEntity::getServiceTypeName));
+                .collect(Collectors.groupingBy(service -> service.getServiceTypeName() != null ? service.getServiceTypeName() : "Unknown"));
 
         List<ServiceAverageTime> averages = groupedByType.entrySet().stream()
                 .map(entry -> calculateAverageForType(entry, request.getTimeUnit()))
-                .collect(Collectors.toList());
+                .toList();
 
         logger.info("Calculado média pelos {} tipos de serviços", averages.size());
         return averages;
